# KBEngine-Nex

./: .gitignore  README.md  UPDATE.md  appveyor.yml  build.bat  build.sh  dockerfile  install_linux.sh  install_macos.sh  install_windows.bat
CI/: install_linux_step3_build.sh
demo_kbengine_nex_assets/: entities.xml  requirements.txt
demo_kbengine_nex_assets/base/: Account.py  Avatar.py  Space.py
demo_kbengine_nex_assets/base/components/: Test.py
demo_kbengine_nex_assets/cell/: Avatar.py
demo_kbengine_nex_assets/cell/components/: TestNoBase.py
demo_kbengine_nex_assets/entity_defs/: Account.def  Avatar.def
demo_kbengine_nex_assets/entity_defs/components/: Test.def
demo_kbengine_nex_assets/entity_defs/interfaces/: Combat.def
demo_kbengine_nex_assets/interface/: kbemain.py
demo_kbengine_nex_assets/res/server/: kbengine.xml
demo_kbengine_nex_assets/scripts/: gensdk.bat  gensdk.sh  guiconsole.bat  safe_kill.bat  safe_kill.sh  start_bots.bat  start_bots.sh  start_server.bat  start_server.sh  start_server_background.bat
demo_kbengine_nex_assets/scripts/kbengine_csharp_plugins/: AccountBase.cs  AvatarBase.cs  Blowfish.cs  Bundle.cs  CustomDataTypes.cs  DataTypes.cs  Dbg.cs  Entity.cs  EntityCallAccountBase.cs  EntityCallAvatarBase.cs  EntityCallGateBase.cs  EntityCallMonsterBase.cs  EntityCallNPCBase.cs  EntityCallSpaceBase.cs  EntityCallSpaceDuplicateBase.cs  EntityCallSpacesBase.cs  EntityCallSpawnPointBase.cs  EntityCallTestBase.cs  EntityCallTestNoBaseBase.cs  EntityDef.cs  GateBase.cs  GodotKBEMain.cs  KBETypes.cs  KBEngine.cs  KBEngineArgs.cs  Math.cs  MemoryStream.cs  MessageReaderBase.cs  MessageReaderKCP.cs  MessageReaderTCP.cs  MessageReaderUnityWS.cs  Messages.cs  MonsterBase.cs  NPCBase.cs  NetworkInterfaceBase.cs  NetworkInterfaceKCP.cs  NetworkInterfaceTCP.cs  NetworkInterfaceUnityWS.cs  PacketReceiverUnityWS.cs  PacketSenderKCP.cs  (+11 more)
demo_kbengine_nex_assets/scripts/kbengine_typescript_plugins/: AccountBase.ts  AvatarBase.ts  EntityCallAccountBase.ts  EntityCallAvatarBase.ts  EntityCallGateBase.ts  EntityCallMonsterBase.ts  EntityCallNPCBase.ts  EntityCallSpaceBase.ts  EntityCallSpaceDuplicateBase.ts  EntityCallSpacesBase.ts  EntityCallSpawnPointBase.ts  EntityCallTestBase.ts  EntityCallTestNoBaseBase.ts  EntityDef.ts  Event.ts  ExportEntity.ts  GateBase.ts  KBEEncoding.ts  KBELog.ts  KBEMath.ts  KBEngine.ts  Messages.ts  MonsterBase.ts  NPCBase.ts  NetworkInterface.ts  SpaceBase.ts  (+6 more)
gitee/: install_linux.sh  install_windows.bat
kbe/src/: CMakeLists.txt  common.mak.backup  guiconsole.sln  kbengine nex.sln  vcpkg.json
kbe/src/cmakefile/: OpenSSL.cmake  Python.cmake
kbe/src/lib/client_lib/: CMakeLists.txt  client_lib.vcxproj
kbe/src/lib/common/: CMakeLists.txt  common.vcxproj  kbeversion.h  refcountable.h  strutil.cpp  strutil.h  timestamp.h
kbe/src/lib/db_interface/: CMakeLists.txt  db_interface.cpp  db_interface.vcxproj  entity_table.cpp
kbe/src/lib/db_mongodb/: CMakeLists.txt  common.cpp  common.h  db_context.h  db_exception.cpp  db_exception.h  db_interface_mongodb.cpp  db_interface_mongodb.h  db_mongodb.cpp  db_mongodb.vcxproj  db_mongodb.vcxproj.filters  db_transaction.cpp  db_transaction.h  entity_table_mongodb.cpp  entity_table_mongodb.h  kbe_table_mongodb.cpp  kbe_table_mongodb.h  mongo.h  mongo_cursor_guard.h  mongodb_helper.h  mongodb_watcher.cpp  mongodb_watcher.h
kbe/src/lib/db_mysql/: CMakeLists.txt  db_interface_mysql.cpp  db_mysql.vcxproj
kbe/src/lib/db_redis/: CMakeLists.txt  db_interface_redis.h  db_redis.vcxproj  db_transaction.h
kbe/src/lib/dependencies/curl/projects/Windows/VC14/lib/: libcurl.vcxproj
kbe/src/lib/dependencies/fmt/src/: Makefile
kbe/src/lib/dependencies/g3dlite/: CMakeLists.txt
kbe/src/lib/dependencies/jwsmtp/: jwsmtp.vcxproj
kbe/src/lib/dependencies/jwsmtp/jwsmtp/jwsmtp/: CMakeLists.txt
kbe/src/lib/dependencies/sigar/linux/: CMakeLists.txt
kbe/src/lib/dependencies/tinyxml/: CMakeLists.txt
kbe/src/lib/dependencies/tmxparser/: CMakeLists.txt  TmxLayer.cpp  TmxUtil.cpp
kbe/src/lib/dependencies/tmxparser/tmxparser/: tmxparser.vcxproj
kbe/src/lib/dependencies/vsopenssl/vcbuild/libeay32/: libeay32.vcxproj
kbe/src/lib/dependencies/vsopenssl/vcbuild/ssleay32/: ssleay32.vcxproj
kbe/src/lib/entitydef/: CMakeLists.txt  common.h  entitydef.vcxproj  scriptdef_module.cpp
kbe/src/lib/helper/: CMakeLists.txt  helper.vcxproj
kbe/src/lib/math/: CMakeLists.txt  math.vcxproj
kbe/src/lib/navigation/: CMakeLists.txt  navigation.cpp  navigation.vcxproj  navigation.vcxproj.filters  navigation_mesh_handle.cpp  navigation_mesh_handle.h
kbe/src/lib/network/: CMakeLists.txt  network.vcxproj
kbe/src/lib/pyscript/: CMakeLists.txt  pyscript.vcxproj
kbe/src/lib/python/: CMakeLists.txt
kbe/src/lib/pythonBuild/: pythonBuild.vcxproj
kbe/src/lib/resmgr/: CMakeLists.txt  resmgr.cpp  resmgr.h  resmgr.vcxproj
kbe/src/lib/server/: CMakeLists.txt  server.vcxproj  serverconfig.cpp  serverconfig.h  serverconfig.inl
kbe/src/lib/thread/: CMakeLists.txt  thread.vcxproj
kbe/src/lib/xml/: CMakeLists.txt  xml.vcxproj
kbe/src/server/baseapp/: CMakeLists.txt  baseapp.vcxproj  entity.cpp
kbe/src/server/baseappmgr/: CMakeLists.txt  baseappmgr.vcxproj
kbe/src/server/cellapp/: CMakeLists.txt  cellapp.vcxproj  navigate_handler.cpp
kbe/src/server/cellappmgr/: CMakeLists.txt  cellappmgr.vcxproj
kbe/src/server/dbmgr/: CMakeLists.txt  dbmgr.cpp  dbmgr.vcxproj
kbe/src/server/init/: init.vcxproj
kbe/src/server/loginapp/: CMakeLists.txt  loginapp.vcxproj
kbe/src/server/machine/: CMakeLists.txt  machine.vcxproj
kbe/src/server/tools/bots/: CMakeLists.txt  bots.vcxproj
kbe/src/server/tools/guiconsole/: guiconsole.vcxproj
kbe/src/server/tools/interfaces/: CMakeLists.txt  interfaces.vcxproj
kbe/src/server/tools/kbcmd/: CMakeLists.txt  Makefile  client_sdk.cpp  client_sdk.h  client_sdk_csharp.cpp  client_sdk_csharp.h  client_sdk_cxx.cpp  client_sdk_cxx.h  client_sdk_typescript.cpp  client_sdk_typescript.h  kbcmd.cpp  kbcmd.vcxproj  main.cpp
kbe/src/server/tools/logger/: CMakeLists.txt  logger.vcxproj
(+175 files in other folders)
